--- a/ChatClient/app/src/main/res/values/strings.xml
+++ b/ChatClient/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Chat Client</string>
+    <string name="retry_button_name">Try Again</string>
+    <string name="check_connection">Checking connection</string>
+    <string name="connection_failure">Connection failed</string>
 </resources>
