--- a/ChatClient/app/src/main/res/values/strings.xml
+++ b/ChatClient/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="check_connection">Checking connection</string>
     <string name="connection_failure">Connection failed</string>
 
-    <string name="login_button_start">START</string>
+    <string name="login_button_start">Start</string>
     <string name="login_button_wait">WAIT</string>
     <string name="login_nickname_hint">Enter your nickname</string>
     <string name="login_nickname_empty">Nickname Field should NOT be empty</string>
