--- a/ChatClient/app/src/main/res/values/strings.xml
+++ b/ChatClient/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="login_button_wait">WAIT</string>
     <string name="login_nickname_hint">Enter your nickname</string>
     <string name="login_nickname_empty">Nickname Field should NOT be empty</string>
+    <string name="login_nickname_small">Nickname Field should NOT be less then 3 letters</string>
     <string name="login_about_hint">What I do</string>
     <string name="login_about_empty">What I Do Field should NOT be empty</string>
     <string name="login_profile_picture_invalid">Profile PICTURE should be PICTURE</string>
